--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A plugin which facilitate the communication with ZPL Printers.",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
+  "type": "module",
   "types": "dist/esm/index.d.ts",
   "unpkg": "dist/plugin.js",
   "files": [
