feat: add project config and USB printing functionality
- Add project configuration file for albgen-capacitor-zpl-plugin.
- Implement USB printing functionality with permission handling in the ZebraPrinterPlugin.
- Add @capacitor/cli version 7.2.0 and update various dependencies in package-lock.json.
- Add Capacitor CLI as a development dependency.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@capacitor/android": "^7.0.1",
+    "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.0.1",
     "@capacitor/docgen": "^0.3.0",
     "@capacitor/ios": "^7.0.1",
