--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "unpkg": "dist/plugin.js",
   "files": [
     "android/src/main/",
+    "android/libs/",
     "android/build.gradle",
     "dist/",
     "ios/Plugin/",
