Added hook to fix the copy of jar when using this plugin in other project
it will execute the javascript file to make the copy since npx cap sync does not copy the lib folder or jar files

--- a/package.json
+++ b/package.json
@@ -71,11 +71,14 @@
     "extends": "@ionic/eslint-config/recommended"
   },
   "capacitor": {
+    "android": {
+        "src": "android",
+        "hooks": {
+          "capacitor:sync": "node scripts/copy-jars.js"
+        }
+    },
     "ios": {
       "src": "ios"
-    },
-    "android": {
-      "src": "android"
     }
   },
   "homepage": "https://github.com/albgen/capacitor-zpl-plugin.git#readme"
