chore: include "scripts/" in project files list
- Add "scripts/" to the list of files to be included in the project.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "android/build.gradle",
     "dist/",
     "ios/Plugin/",
+    "scripts/",
     "CreateCapacitorPlugin.podspec"
   ],
   "author": "albgen",
