--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "native"
   ],
   "scripts": {
+    "capacitor:sync:before": "echo sync before capacitor:sync:before",
+    "capacitor:sync:after": "node scripts/copy-jars.cjs",
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
     "verify:ios": "cd ios && pod install && xcodebuild -workspace Plugin.xcworkspace -scheme Plugin -destination generic/platform=iOS && cd ..",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
@@ -73,14 +75,14 @@
   },
   "capacitor": {
     "android": {
-      "src": "android",
-      "hooks": {
-        "capacitor:sync": "node scripts/copy-jars.js"
-      }
+      "src": "android"
     },
     "ios": {
       "src": "ios"
     }
   },
-  "homepage": "https://github.com/albgen/capacitor-zpl-plugin.git#readme"
+  "homepage": "https://github.com/albgen/capacitor-zpl-plugin.git#readme",
+  "dependencies": {
+    "chalk": "^5.4.1"
+  }
 }
